# Stayhub

./: .gitignore  MIGRATIONS_README.md  MINIO_SETUP.md  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  package.json  pnpm-lock.yaml
backend/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  migrate.py  pyproject.toml  pytest.ini  requirements.txt  run_migrations.py  start-dev.sh  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_payment_fields.py
backend/app/: __init__.py  auth.py  config.py  email.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  bookings.py  listings.py  payments.py  reviews.py
backend/app/services/: s3_service.py  stripe_service.py
backend/tests/: README.md  conftest.py  test_auth.py  test_bookings.py  test_listings.py  test_payments.py  test_reviews.py  test_setup.py
frontend/: Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  bookings.ts  client.ts  listings.ts  payments.ts  reviews.ts
frontend/src/config/: stripe.ts
frontend/src/constants/: queryKeys.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useForm.ts  useImageUpload.ts
frontend/src/pages/: CreateListing.tsx  Dashboard.tsx  EditListing.tsx  Home.tsx  ListingDetail.tsx  Login.tsx  (+1 more)
nginx/: default.conf  nginx.conf  nginx.prod.conf  prod.conf
scripts/: setup-minio.sh  setup-ssl.sh
(+24 files in other folders)
