[tool.poetry]
name = "stayhub-backend"
version = "0.1.0"
description = "Backend API for StayHub application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pillow = "^10.1.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
aiofiles = "^23.2.1"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.1.0"
email-validator = "^2.0.0"
aiosmtplib = "^3.0.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 